Fix form being shown on mobile navbar

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -77,6 +77,7 @@ nav ul a:hover {
     width: 100%;
     height: calc(100vh - 60px);
     transition: 0.5s;
+    z-index: 1000;
   }
 
   input[type="checkbox"]:checked ~ ul {
